# Jarvis-android

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  RoadMap  SECURITY.md  build.gradle.kts  dashboard.html  docker-compose.yml  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build.yml  ci-android.yml  ci-brain.yml
analysis/: TOPOLOGY.html  call-graph.mmd  critical-path.mmd  data-lineage.mmd  extract_topology.py  topology.json
android/: MODULES.md  README.md  build.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
brain/: MODULES.md  __init__.py  logging_config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
brain/agents/: __init__.py
brain/api/: __init__.py
brain/compute/: __init__.py  models.py
brain/contract/: __init__.py  models.py
brain/language/: __init__.py
brain/memory/: __init__.py
brain/migrations/: __init__.py
brain/router/: __init__.py
brain/security/: __init__.py
brain/tests/: __init__.py  test_contract.py  test_health.py  test_logging.py  test_models.py
brain/transfer/: __init__.py
docs/: 2026-06-18-vision-cognitive-framework-PRD.md  ACTIVATION.md  ARCHITECTURE.md  SETUP.md  VISION-CAPABILITIES.md
docs/adr/: ADR-001.md  ADR-002.md  (+10 more)
gradle/: libs.versions.toml
node-agent/: agent.py  install.sh
plu/: CLAUDE.md  PLAN.md  VISION-DUAL-SYSTEM.md
sdk/: README.md
vision-protocol/: build.gradle.kts
(+487 files in other folders)
